create project webview ui update

--- a/view/createProject/index.css
+++ b/view/createProject/index.css
@@ -23,34 +23,211 @@ body.vscode-high-contrast {
   background-color: var(--vscode-input-placeholderForeground);
 }
 
-.tpl {
-  color: #999;
-  background-color: rgb(238, 241, 246)
+.el-col {
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
 
-.tpl .tplTitle {
+.el-container {
+  height: 100%;
+}
+
+.selectTemplate, .enterDetails {
   padding: 20px;
-  font-weight: bolder;
+  height: 600px;
 }
 
-.tpl .tplBackground {
-  padding: 10px;
-  border-top: 1px solid #eee;
+.headStyle {
+  text-align: left;
+  color: var(--vscode-input-foreground);
+}
+
+.headStyle .title {
+  font-size: xx-large;
+  padding-bottom: 10px;
   font-weight: bold;
+}
+
+.headStyle .title span {
+  color: var(--vscode-textLink-foreground);
+}
+
+.headStyle .title span:hover {
+  cursor: pointer;
+}
+
+.typeList {
+  color: var(--vscode-input-foreground);
+  margin-right: 20px;
+  width: 150px;
+  height: 100%;
+}
+
+.templateTypes div {
+  padding: 5px 0px;
+  color: var(--vscode-input-foreground);
+  font-size: large;
+}
+
+.templateTypes .selectItem {
+  color: var(--vscode-textLink-foreground)
+}
+
+.templateTypes div:hover {
+  color: var(--vscode-textLink-foreground);
+  cursor: pointer;
+}
+
+.carStyle {
+  position: relative;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  overflow: hidden;
+  height: 234px;
+  width: 160px;
+  box-sizing: border-box;
+}
+
+.carStyle:hover {
+  animation: carStyleAni 0.1s ease-in forwards;
+}
+
+.grid-content {
+  position: relative;
+  height: calc(100%);
+  overflow: hidden;
   display: flex;
+  flex-direction: column;
+  background-color: var(--vscode-editorSuggestWidget-background);
+  border-radius: 5px;
+}
+
+.el-main {
+  border-left: 1px solid var(--vscode-input-foreground);
+}
+
+.grid-content .tempName {
+  font-size: x-large;
+  padding: 10px;
+  text-align: left;
+}
+
+.grid-content .desc {
+  flex: 1;
+  font-size: small;
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin: 0px 10px 10px 10px;
+}
+
+.btnShow {
+  position: absolute;
+  display: flex;
+  height: calc(100% + 30px);
+  width: 100%;
+  /* border: 3px solid #ff0; */
+  box-sizing: border-box;
+  flex-direction: column;
+}
+
+.applyBtn {
+  height: 30px;
+  text-align: center;
+  display: flex
+}
+
+.applyBtn div {
+  border: 1px solid var(--vscode-input-foreground);
+  margin: auto;
+  width: 70%
+}
+
+.btnShow:hover {
+  top: -30px;
+  cursor: pointer;
+}
+
+.btnShow .clickBtn {
+  background: #12527e;
+  color: #fff;
+  height: 30px;
+  display: flex;
+  width: 100%;
   align-items: center;
 }
 
-.tpl .tplBackground:hover {
-  background: #ecf5ff
+.btnShow .clickBtn div {
+  width: 100%;
+  text-align: center;
 }
 
-.tpl .tplSelect {
-  background: #ecf5ff
+@keyframes carStyleAni {
+  from {
+    padding-top: 10px;
+    padding-bottom: 0px;
+  }
+  to {
+    padding-top: 0px;
+    padding-bottom: 10px;
+  }
 }
 
-.img {
-  width: 20px;
-  height: 20px;
+.showTemplate {
+  color: var(--vscode-input-foreground);
   margin-right: 20px;
 }
+
+.showTemplate .tempName {
+  font-size: x-large;
+  padding: 1em 0em;
+  text-align: left;
+}
+
+.showTemplate .desc {
+  flex: 1;
+  text-align: left;
+}
+
+.showTemplate .gitUrl {
+  margin-top: 50px;
+  font-size: small;
+  color: var(--vscode-textLink-foreground);
+}
+
+/* 
+.edit::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+.edit::-webkit-scrollbar-track {
+  background: rgb(239, 239, 239);
+  border-radius: 2px;
+}
+
+.edit::-webkit-scrollbar-thumb {
+  background: #bfbfbf;
+  border-radius: 10px;
+}
+
+.edit::-webkit-scrollbar-thumb:hover {
+  background: #333;
+}
+
+.edit::-webkit-scrollbar-corner {
+  background: #179a16;
+} */
+
+/* 
+::-webkit-scrollbar 滚动条整体部分
+::-webkit-scrollbar-thumb  滚动条里面的小方块，能向上向下移动（或往左往右移动，取决于是垂直滚动条还是水平滚动条）
+::-webkit-scrollbar-track  滚动条的轨道（里面装有Thumb）
+::-webkit-scrollbar-button 滚动条的轨道的两端按钮，允许通过点击微调小方块的位置。
+::-webkit-scrollbar-track-piece 内层轨道，滚动条中间部分（除去）
+::-webkit-scrollbar-corner 边角，即两个滚动条的交汇处
+::-webkit-resizer 两个滚动条的交汇处上用于通过拖动调整元素大小的小控件 
+*/
