--- a/view/addDevice/view.ejs
+++ b/view/addDevice/view.ejs
@@ -31,7 +31,7 @@
           <el-input placeholder="" v-model="form.devPwd" show-password @input="inputChange"></el-input>
         </el-form-item>
       </el-form>
-      <div style="text-align: center;">
+      <div style="text-align: right;">
         <el-button type="info" style="margin: auto;" @click="onAddDevice">
           <%=language.addDeviceText%>
         </el-button>
