--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -14,72 +14,170 @@
 </head>
 
 <bod>
-  <div id="app" style="margin:0px;">
-    <el-container>
-      <el-aside class="tpl" width="250px">
-        <div class="tplTitle">
-          <%=language.templateListTxt%>
-        </div>
-        <div v-for="item in templateList">
-          <div :class="['tplBackground',selectTplName==item.tplName?'tplSelect':'']" @click="selectTpl(item)">
-            <el-image class="img" :src="item.imageSrc" fit="fit">
-            </el-image>
-            {{item.tplName}}
+  <div id="app">
+    <!-- 模板选择 -->
+    <div v-if="plan == 'selectTemplate'" class="selectTemplate">
+      <el-container>
+        <!-- 标题 -->
+        <el-header style="height: 20%;padding:20px 0px;">
+          <div class="headStyle">
+            <div class="title">项目模板库</div>
+            <div>可根据开发类型，选择对应模板进行快速构建项目</div>
           </div>
-        </div>
-      </el-aside>
+        </el-header>
 
-      <el-main>
-        <el-form ref="form" :rules="rules" :model="form" label-width="100px">
-          <el-form-item label="<%=language.nameTxt%>" prop="name">
-            <el-input v-model="form.name" @input="inputChange"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.buildidTxt%>" prop="bundleid">
-            <el-input v-model="form.bundleid" @input="inputChange"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.savePathTxt%>" prop="savePath">
-            <el-input disabled placeholder="" v-model="form.savePath" class="input-with-select" @input="inputChange">
-              <el-button slot="append" type="info" @click="selectSavePath">
-                <%=language.selectPathText%>
-              </el-button>
-            </el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.descriptionTxt%>" prop="description">
-            <el-input v-model="form.description" @input="inputChange"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.versionTxt%>" prop="version">
-            <el-input v-model="form.version" @input="inputChange"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.vendorIdTxt%>" prop="vendorId">
-            <el-input v-model="form.vendorId" @input="inputChange" placeholder="10001"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.vendorNameTxt%>" prop="vendorName">
-            <el-input v-model="form.vendorName" @input="inputChange" placeholder="Username"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.vendorEmailTxt%>" prop="vendorEmail">
-            <el-input v-model="form.vendorEmail" @input="inputChange" placeholder="Example@acoinfo.com"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.vendorPhoneTxt%>" prop="vendorPhone">
-            <el-input v-model="form.vendorPhone" @input="inputChange"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.vendorFaxTxt%>" prop="vendorFax">
-            <el-input v-model="form.vendorFax" @input="inputChange"></el-input>
-          </el-form-item>
-          <el-form-item label="<%=language.otherText%>" prop="other">
-            <el-checkbox-group v-model="form.other" @change="inputChange">
-              <el-checkbox label="openFile">
-                <%=language.openFileText%>
-              </el-checkbox>
-            </el-checkbox-group>
-          </el-form-item>
-          <el-form-item>
-            <el-button type="info" @click="onSubmit" type="info" :loading="loading">
-              <%=language.createButtonTxt%>
-            </el-button>
-          </el-form-item>
-        </el-form>
-      </el-main>
-    </el-container>
+        <!-- 主体 -->
+        <el-container style="height: 80%">
+          <!-- 侧边栏 -->
+          <el-aside width="150px" height="100%" class="typeList">
+            <div class="templateTypes">
+              <div v-for="item in tplTypes" @click="selectTplType(item)" v-bind:key="item.type"
+                :class="[selectTypes.type == item.type?'selectItem':'']">{{
+                item.type }}</div>
+            </div>
+          </el-aside>
+
+          <!-- 主要区域容器 -->
+          <el-main>
+            <el-row :gutter="20" v-for="(items, indexRow) in templates" v-bind:key="indexRow">
+              <el-col :span="6" v-for="item in items" v-bind:key="item.gitUrl">
+                <div class="carStyle">
+                  <div class="grid-content">
+                    <el-image style="background: #828282; width: 160px; height: 96px" :src="item.icon" fit="fill">
+                    </el-image>
+                    <div class="tempName"> {{ item.tempName }}</div>
+                    <div class="desc">{{ item.description }}</div>
+                    <div class="applyBtn">
+                      <div>应用</div>
+                    </div>
+                    <div class="btnShow">
+                      <div style="flex: 1"></div>
+                      <div class="clickBtn" @click="selectTpl(item)">
+                        <div>立即应用</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </el-col>
+            </el-row>
+          </el-main>
+        </el-container>
+      </el-container>
+    </div>
+
+    <!--输入详细信息-->
+    <div v-if="plan == 'enterDetails'" class="enterDetails">
+      <el-container>
+        <!-- 标题 -->
+        <el-header style="height: 20%;padding:20px 0px;">
+          <div class="headStyle">
+            <div class="title"><span @click="backTpl">项目模板库</span> > {{selectTypes.type}}</div>
+            <div>
+              {{selectTypes.desc}}
+            </div>
+          </div>
+        </el-header>
+
+        <el-container style="height: 75%">
+          <!-- 侧边栏 -->
+          <el-aside width="300px" class="showTemplate">
+            <el-image style="background: #828282; width: 80%" :src="selectTemp.icon" fit="fill"></el-image>
+            <div class="tempName">{{ selectTemp.tempName }}</div>
+            <div class="desc">{{ selectTemp.description }}</div>
+            <div class="gitUrl">{{ selectTemp.gitUrl }}</div>
+          </el-aside>
+
+          <el-main>
+            <el-form ref="form" :rules="rules" :model="form" label-width="100px" style="width: 100%">
+              <el-row :gutter="20">
+                <el-col :span="12">
+                  <el-form-item label="<%=language.nameTxt%>" prop="name">
+                    <el-input v-model="form.name" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+                <el-col :span="12">
+                  <el-form-item label="<%=language.buildidTxt%>" prop="bundleid">
+                    <el-input v-model="form.bundleid" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+              </el-row>
+              <el-row :gutter="20">
+                <el-col :span="24">
+                  <el-form-item label="<%=language.descriptionTxt%>" prop="description">
+                    <el-input v-model="form.description" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+              </el-row>
+              <el-row :gutter="20">
+                <el-col :span="24">
+                  <el-form-item label="<%=language.savePathTxt%>" prop="savePath">
+                    <el-input disabled placeholder="" v-model="form.savePath" class="input-with-select"
+                      @input="inputChange">
+                      <el-button slot="append" type="info" @click="selectSavePath">
+                        <%=language.selectPathText%>
+                      </el-button>
+                    </el-input>
+                  </el-form-item>
+                </el-col>
+              </el-row>
+              <el-row :gutter="20">
+                <el-col :span="24">
+                  <el-form-item label="<%=language.versionTxt%>" prop="version">
+                    <el-input v-model="form.version" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+              </el-row>
+              <el-row :gutter="20">
+                <el-col :span="12">
+                  <el-form-item label="<%=language.vendorIdTxt%>" prop="vendorId">
+                    <el-input v-model="form.vendorId" placeholder="10001" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+                <el-col :span="12">
+                  <el-form-item label="<%=language.vendorNameTxt%>" prop="vendorName">
+                    <el-input v-model="form.vendorName" placeholder="Username" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+              </el-row>
+              <el-row :gutter="20">
+                <el-col :span="12">
+                  <el-form-item label="<%=language.vendorEmailTxt%>" prop="vendorEmail">
+                    <el-input v-model="form.vendorEmail" placeholder="Example@acoinfo.com" @change="inputChange">
+                    </el-input>
+                  </el-form-item>
+                </el-col>
+                <el-col :span="12">
+                  <el-form-item label="<%=language.vendorPhoneTxt%>" prop="vendorPhone">
+                    <el-input v-model="form.vendorPhone" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+              </el-row>
+              <el-row :gutter="20">
+                <el-col :span="12">
+                  <el-form-item label="<%=language.vendorFaxTxt%>" prop="vendorFax">
+                    <el-input v-model="form.vendorFax" @change="inputChange"></el-input>
+                  </el-form-item>
+                </el-col>
+                <el-col :span="12">
+                  <el-form-item label="<%=language.otherText%>" prop="other">
+                    <el-checkbox-group v-model="form.other" @change="inputChange">
+                      <el-checkbox label="openFile">
+                        <%=language.openFileText%>
+                      </el-checkbox>
+                    </el-checkbox-group>
+                  </el-form-item>
+                </el-col>
+              </el-row>
+            </el-form>
+          </el-main>
+        </el-container>
+        <el-footer style="text-align: right;padding:20px 0px;">
+          <el-button type="info" @click="onSubmit" type="info" :loading="loading">
+            <%=language.createButtonTxt%>
+          </el-button>
+        </el-footer>
+      </el-container>
+    </div>
   </div>
   </body>
   <script type="text/javascript" src="<%=vueJsUri%>"></script>
