--- a/view/deviceInfo/view.ejs
+++ b/view/deviceInfo/view.ejs
@@ -35,7 +35,7 @@
           <el-input placeholder="" v-model="form.devPwd" show-password @input="inputChange"></el-input>
         </el-form-item>
       </el-form>
-      <div style="text-align: center;">
+      <div style="text-align: right;">
         <el-button type="info" style="margin: auto;" @click="onUpdate">
           <%=language.devUpdate%>
         </el-button>
