create project web height size auto

--- a/view/createProject/index.css
+++ b/view/createProject/index.css
@@ -38,7 +38,7 @@ body.vscode-high-contrast {
 
 .selectTemplate, .enterDetails {
   padding: 20px;
-  height: 600px;
+  height: 90vh;
 }
 
 .headStyle {
