--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -172,7 +172,7 @@
           </el-main>
         </el-container>
         <el-footer style="text-align: right;padding:20px 0px;">
-          <el-button type="info" @click="onSubmit" type="info" :loading="loading">
+          <el-button type="info" @click="onSubmit" type="info" :loading="loading" style="background: #0e639c;">
             <%=language.createButtonTxt%>
           </el-button>
         </el-footer>
