edgeros .bundleid ->  package.name; add edgeros.json name

--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="<%=cssUri%>">
   <script>
     let nameNotEmptyText = '<%=language.nameNotEmptyText%>';
+    let bundleIdNotEmptyText = '<%=language.bundleIdNotEmptyText%>';
+    let bundleIdIncorrectFormatText = '<%=language.bundleIdIncorrectFormatText%>';
+    let versionIdNotEmptyText = '<%=language.versionIdNotEmptyText%>';
+    let versionIdIncorrectFormatText = '<%=language.versionIdIncorrectFormatText%>';
   </script>
 </head>
 
