creat project hint upload

--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -14,6 +14,7 @@
     let bundleIdIncorrectFormatText = '<%=language.bundleIdIncorrectFormatText%>';
     let versionIdNotEmptyText = '<%=language.versionIdNotEmptyText%>';
     let versionIdIncorrectFormatText = '<%=language.versionIdIncorrectFormatText%>';
+    let versionNameNotEmptyText = '<%=language.versionNameNotEmptyText%>';
   </script>
 </head>
 
