remove utf-8 文件检查 button color build

--- a/view/addDevice/view.ejs
+++ b/view/addDevice/view.ejs
@@ -32,7 +32,7 @@
         </el-form-item>
       </el-form>
       <div style="text-align: right;">
-        <el-button type="info" style="margin: auto;" @click="onAddDevice">
+        <el-button type="primary" style="margin: auto;" @click="onAddDevice" class="addDevice">
           <%=language.addDeviceText%>
         </el-button>
       </div>
