--- a/view/deviceInfo/view.ejs
+++ b/view/deviceInfo/view.ejs
@@ -36,7 +36,7 @@
         </el-form-item>
       </el-form>
       <div style="text-align: right;">
-        <el-button type="info" style="margin: auto;" @click="onUpdate">
+        <el-button type="primary" style="margin: auto;" @click="onUpdate">
           <%=language.devUpdate%>
         </el-button>
         <el-button type="danger" style="margin: auto;" @click="onDelete">
