eslint javascript view files

--- a/view/addDevice/view.ejs
+++ b/view/addDevice/view.ejs
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="<%=elementUiCssUri%>">
   <link rel="stylesheet" href="<%=indexCssUri%>">
   <script type="text/javascript">
-    let ipNotEmptyText = "<%=language.ipNotEmptyText%>";
-    let ipIncorrectFormatText = "<%=language.ipIncorrectFormatText%>";
-    let devNameNotEmptyText = "<%=language.devNameNotEmptyText%>";
-    let devNameExistText = "<%=language.devNameExistText%>";
+    const nlsMessages = {
+      ipNotEmptyText: "<%=language.ipNotEmptyText%>",
+      ipIncorrectFormatText: "<%=language.ipIncorrectFormatText%>",
+      devNameNotEmptyText: "<%=language.devNameNotEmptyText%>",
+      devNameExistText: "<%=language.devNameExistText%>"
+    }
   </script>
 </head>
 
