--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="<%=elementUiCssUri%>">
   <link rel="stylesheet" href="<%=cssUri%>">
   <script>
-    let nameNotEmptyText = '<%=language.nameNotEmptyText%>';
-    let bundleIdNotEmptyText = '<%=language.bundleIdNotEmptyText%>';
-    let bundleIdIncorrectFormatText = '<%=language.bundleIdIncorrectFormatText%>';
-    let versionIdNotEmptyText = '<%=language.versionIdNotEmptyText%>';
-    let versionIdIncorrectFormatText = '<%=language.versionIdIncorrectFormatText%>';
-    let vendorNameNotEmptyText = '<%=language.vendorNameNotEmptyText%>'
+    const nlsMessages = {
+      nameNotEmptyText: '<%=language.nameNotEmptyText%>',
+      bundleIdNotEmptyText: '<%=language.bundleIdNotEmptyText%>',
+      bundleIdIncorrectFormatText: '<%=language.bundleIdIncorrectFormatText%>',
+      versionIdNotEmptyText: '<%=language.versionIdNotEmptyText%>',
+      versionIdIncorrectFormatText: '<%=language.versionIdIncorrectFormatText%>',
+      vendorNameNotEmptyText: '<%=language.vendorNameNotEmptyText%>'
+    }
   </script>
 </head>
 
