--- a/view/deviceInfo/view.ejs
+++ b/view/deviceInfo/view.ejs
@@ -8,14 +8,16 @@
   <link rel="stylesheet" href="<%=elementUiCssUri%>">
   <link rel="stylesheet" href="<%=indexCssUri%>">
   <script type="text/javascript">
-    let ipNotEmptyText = "<%=language.ipNotEmptyText%>";
-    let ipIncorrectFormatText = "<%=language.ipIncorrectFormatText%>";
-    let devNameNotEmptyText = "<%=language.devNameNotEmptyText%>";
-    let devNameExistText = "<%=language.devNameExistText%>";
-    let devDeleteHintTitleText = "<%=language.devDeleteHintTitleText%>";
-    let devDeleteHintContextText = "<%=language.devDeleteHintContextText%>";
-    let devDeleteHintYesButtonText = "<%=language.devDeleteHintYesButtonText%>";
-    let devDeleteHintNoButtonText = "<%=language.devDeleteHintNoButtonText%>";
+    const nlsMessages = {
+      ipNotEmptyText: "<%=language.ipNotEmptyText%>",
+      ipIncorrectFormatText: "<%=language.ipIncorrectFormatText%>",
+      devNameNotEmptyText: "<%=language.devNameNotEmptyText%>",
+      devNameExistText: "<%=language.devNameExistText%>",
+      devDeleteHintTitleText: "<%=language.devDeleteHintTitleText%>",
+      devDeleteHintContextText: "<%=language.devDeleteHintContextText%>",
+      devDeleteHintYesButtonText: "<%=language.devDeleteHintYesButtonText%>",
+      devDeleteHintNoButtonText: "<%=language.devDeleteHintNoButtonText%>"
+    }
   </script>
 </head>
 
