fix createProject view variable name

--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -111,8 +111,8 @@
         <el-container style="height: 75%">
           <!-- 侧边栏 -->
           <el-aside width="200px" class="showTemplate">
-            <el-image style="background: #828282; width: 100%" :src="selectTemp.icon" fit="fill"></el-image>
-            <div class="tempName">{{ selectTemp.tempName }}</div>
+            <el-image style="background: #828282; width: 100%" :src="selectTemp.banner" fit="fill"></el-image>
+            <div class="tempName">{{ selectTemp.name }}</div>
             <div class="desc">{{ selectTemp.description }}</div>
             <div class="gitUrl">{{ selectTemp.gitUrl }}</div>
           </el-aside>
