fix: make version required field of new project

--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -13,8 +13,10 @@
       nameNotEmptyText: '<%=language.nameNotEmptyText%>',
       bundleIdNotEmptyText: '<%=language.bundleIdNotEmptyText%>',
       bundleIdIncorrectFormatText: '<%=language.bundleIdIncorrectFormatText%>',
-      versionIdNotEmptyText: '<%=language.versionIdNotEmptyText%>',
-      versionIdIncorrectFormatText: '<%=language.versionIdIncorrectFormatText%>',
+      versionNotEmptyText: '<%=language.versionNotEmptyText%>',
+      versionIncorrectFormatText: '<%=language.versionIncorrectFormatText%>',
+      vendorIdNotEmptyText: '<%=language.vendorIdNotEmptyText%>',
+      vendorIdIncorrectFormatText: '<%=language.vendorIdIncorrectFormatText%>',
       vendorNameNotEmptyText: '<%=language.vendorNameNotEmptyText%>'
     }
   </script>
