fix: validate vendor email, phone and fax

--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -17,7 +17,9 @@
       versionIncorrectFormatText: '<%=language.versionIncorrectFormatText%>',
       vendorIdNotEmptyText: '<%=language.vendorIdNotEmptyText%>',
       vendorIdIncorrectFormatText: '<%=language.vendorIdIncorrectFormatText%>',
-      vendorNameNotEmptyText: '<%=language.vendorNameNotEmptyText%>'
+      vendorNameNotEmptyText: '<%=language.vendorNameNotEmptyText%>',
+      invalidEmailText: '<%=language.invalidEmailText%>',
+      invalidPhoneText: '<%=language.invalidPhoneText%>'
     }
   </script>
 </head>
