add email validation

--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -19,6 +19,7 @@
       vendorIdIncorrectFormatText: '<%=language.vendorIdIncorrectFormatText%>',
       vendorNameNotEmptyText: '<%=language.vendorNameNotEmptyText%>',
       invalidEmailText: '<%=language.invalidEmailText%>',
+      emailNotEmptyText: '<%=language.emailNotEmptyText%>',
       invalidPhoneText: '<%=language.invalidPhoneText%>'
     }
   </script>
