--- a/view/createProject/index.css
+++ b/view/createProject/index.css
@@ -95,6 +95,7 @@ body.vscode-high-contrast {
   height: 234px;
   width: 160px;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .carStyle:hover {
@@ -117,7 +118,7 @@ body.vscode-high-contrast {
 
 .grid-content .tempName {
   font-size: x-large;
-  margin: 10px;
+  margin: 10px 15px 10px 15px;
   text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -133,15 +134,16 @@ body.vscode-high-contrast {
   text-align: left;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  margin: 0px 10px 10px 10px;
+  margin: 0px 15px 12px 15px;
+  overflow: hidden;
 }
 
 .btnShow {
   position: absolute;
   display: flex;
-  height: calc(100% + 30px);
+  height: calc(100% + 35px);
   width: 100%;
   /* border: 3px solid #ff0; */
   box-sizing: border-box;
@@ -161,14 +163,14 @@ body.vscode-high-contrast {
 }
 
 .btnShow:hover {
-  top: -30px;
+  top: -35px;
   cursor: pointer;
 }
 
 .btnShow .clickBtn {
   background: #12527e;
   color: #fff;
-  height: 30px;
+  height: 35px;
   display: flex;
   width: 100%;
   align-items: center;
