--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -11,6 +11,7 @@
   <script>
     const nlsMessages = {
       nameNotEmptyText: '<%=language.nameNotEmptyText%>',
+      nameIncorrectFormatText: '<%=language.nameIncorrectFormatText%>',
       bundleIdNotEmptyText: '<%=language.bundleIdNotEmptyText%>',
       bundleIdIncorrectFormatText: '<%=language.bundleIdIncorrectFormatText%>',
       versionNotEmptyText: '<%=language.versionNotEmptyText%>',
