--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -21,7 +21,8 @@
       vendorNameNotEmptyText: '<%=language.vendorNameNotEmptyText%>',
       invalidEmailText: '<%=language.invalidEmailText%>',
       emailNotEmptyText: '<%=language.emailNotEmptyText%>',
-      invalidPhoneText: '<%=language.invalidPhoneText%>'
+      invalidPhoneText: '<%=language.invalidPhoneText%>',
+      invalidFaxText:'<%=language.invalidFaxText%>'
     }
   </script>
 </head>
